--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Hello World - Azure</h1>
     <h2>This is a webpage by Chris Nance.</h2>
-    <h3>Version 2.0</h3>
+    <h3>Version 2.0 for Azure 2020</h3>
 </body>
 </html>
